change project name and removed email issue (%)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Angular Application</span>
+    <span>User Management Project</span>
     <span class="example-spacer"></span>
   </mat-toolbar>
 
@@ -37,7 +37,7 @@
           <!-- Email Column -->
           <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-            <td mat-cell *matCellDef="let row"> {{row.email}}% </td>
+            <td mat-cell *matCellDef="let row"> {{row.email}} </td>
           </ng-container>
 
 
